@@ -1,13 +1,14 @@
 #!/usr/bin/perl -w
 use strict;
-use Gtk2::TestHelper tests => 20;
+use Gtk2::TestHelper tests => 25;
 
 # $Header$
 
 my $window = Gtk2::Window -> new();
 $window -> realize();
 
-my $name = Gtk2::Gdk::Atom -> intern("WM_ICON_NAME", 1);
+my $name = Gtk2::Gdk::Atom -> intern("WM_NAME", 1);
+my $icon_name = Gtk2::Gdk::Atom -> intern("WM_ICON_NAME", 1);
 my $strut = Gtk2::Gdk::Atom -> intern("_NET_WM_STRUT", 0);
 my $strut_partial = Gtk2::Gdk::Atom -> intern("_NET_WM_STRUT_PARTIAL", 0);
 
@@ -18,19 +19,27 @@ foreach ($name, $strut, $strut_partial, $string, $cardinal) {
   isa_ok($_, "Gtk2::Gdk::Atom");
 }
 
-is($name -> name(), "WM_ICON_NAME");
+is($name -> name(), "WM_NAME");
+is($icon_name -> name(), "WM_ICON_NAME");
 is($strut -> name(), "_NET_WM_STRUT");
 is($strut_partial -> name(), "_NET_WM_STRUT_PARTIAL");
 is($string -> name(), "STRING");
 is($cardinal -> name(), "CARDINAL");
 
-$window -> window() -> property_change($name, $string, Gtk2::Gdk::CHARS, "replace", "Bla Bla Bla");
+$window -> window() -> property_change($name, $string, Gtk2::Gdk::CHARS, "replace", "Bla\0Bla\0Bla");
+$window -> window() -> property_change($icon_name, $string, Gtk2::Gdk::CHARS, "replace", "Bla Bla Bla");
 $window -> window() -> property_change($strut, $cardinal, Gtk2::Gdk::USHORTS, "replace", 0, 0, 26, 0);
 $window -> window() -> property_change($strut_partial, $cardinal, Gtk2::Gdk::ULONGS, "replace", 0, 0, 26, 0, 0, 0, 0, 0, 0, 1279, 0, 0);
 
 my ($atom, $format, @data);
 
 ($atom, $format, @data) = $window -> window() -> property_get($name, $string, 0, 1024, 0);
+is($atom -> name(), "STRING");
+is($format, Gtk2::Gdk::CHARS);
+is(@data, 1);
+is($data[0], "Bla\0Bla\0Bla");
+
+($atom, $format, @data) = $window -> window() -> property_get($icon_name, $string, 0, 1024, 0);
 is($atom -> name(), "STRING");
 is($format, Gtk2::Gdk::CHARS);
 is(@data, 1);
